Update FPsim - Family Planning Simulation Model.ipynb

--- a/FPsim - Family Planning Simulation Model.ipynb
+++ b/FPsim - Family Planning Simulation Model.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# Simple Example Usage for FPsim - Family Planning Simulation Model\n",
-    "# Credit BMGF Institute for Disease Management (IDM)\n",
+    "# Credit BMGF Institute for Disease Modeling (IDM)\n",
     "# Github Repo - https://github.com/fpsim/\n",
     "# Code Source = https://github.com/fpsim/fpsim/blob/main/examples/example_sim.py"
    ]
